--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -33,6 +33,20 @@ article
       font-weight: bold
       font-size: 1.2rem
 
+    h3:before
+      color: #3CC4C4
+      content: "*"
+      font-weight: bold
+      font-size: .95rem
+      padding-right: 5px
+
+    h4:before
+      color: #5EA2A2
+      content: "&"
+      font-weight: bold
+      font-size: .9rem
+      padding-right: 5px
+
     img
     video
       display: block
