--- a/layout/_partial/styles.ejs
+++ b/layout/_partial/styles.ejs
@@ -1,3 +1,3 @@
 <!-- styles -->
-<%- css('https://cdn.bootcss.com/font-awesome/5.11.2/css/all.min.css') %>
-<%- css('https://cdn.bootcss.com/justifiedGallery/3.7.0/css/justifiedGallery.min.css') %>
+<%- css('https://cdn.staticfile.org/font-awesome/5.12.1/css/all.min.css') %>
+<%- css('https://cdn.staticfile.org/justifiedGallery/3.7.0/css/justifiedGallery.min.css') %>
