Fix:227 TOC Rendering on Print

--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -199,3 +199,9 @@
         float: left
         margin-right: 2rem
         font-style: italic
+
+@media print 
+  #header-post
+    display: none
+  #footer-post-container
+    display: none
