--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -178,15 +178,11 @@ code
 
 p
   code
-    padding: 0
+    padding: .1rem .4rem
     margin: 0
     font-weight: 500
     font-family: $font-family-mono
-    /* font-size: 85%; */
-    background-color: rgba(27,31,35,.05)
-    //border-radius: 3px;
-    //padding: 0 5px
-    //border: 1px dotted $color-border
+    background-color: rgba(200,200,200,.3)
     border-radius: 4px
     border-style: none
     -webkit-border-radius: 4px
