fix:valine font

--- a/source/css/_partial/comments.styl
+++ b/source/css/_partial/comments.styl
@@ -1,9 +1,9 @@
 .blog-post-comments
   margin-top: 2rem
-  margin-bottom: 4rem
+  margin-bottom: 2rem
 
 #valine_container
   .vwrap
-    .vedit
-      #veditor
+    .vheader .vinput,.vedit #veditor
+        font-weight: 500
         font-family: "Fira Code", 'Noto Sans SC', sans-serif, monospace
