--- a/layout/_partial/post/share.ejs
+++ b/layout/_partial/post/share.ejs
@@ -1,6 +1,12 @@
 <ul>
-  <li><a class="icon" href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fab fa-qq <%= icon_class_name %>" aria-hidden="true"></i></a></li>
-  <li><a class="icon" href="https://service.weibo.com/share/share.php?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fab fa-weibo <%= icon_class_name %>" aria-hidden="true"></i></a></li>
-  <li><a class="icon" href="https://twitter.com/share?url=<%= page.permalink %>&text=<%= page.title %>"><i class="fab fa-twitter <%= icon_class_name %>" aria-hidden="true"></i></a></li>
-  <li><a class="icon" href="mailto:?subject=<%= page.title %>&body=Check out this article: <%= page.permalink %>"><i class="fas fa-envelope <%= icon_class_name %>" aria-hidden="true"></i></a></li>
+    <li><a class="icon"
+           href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=<%= page.permalink %>&title=<%= page.title %>"><i
+                    class="fab fa-qq <%= icon_class_name %>" aria-hidden="true"></i></a></li>
+    <li><a class="icon"
+           href="https://service.weibo.com/share/share.php?url=<%= page.permalink %>&title=<%= page.title %>"><i
+                    class="fab fa-weibo <%= icon_class_name %>" aria-hidden="true"></i></a></li>
+    <li><a class="icon" href="https://twitter.com/share?url=<%= page.permalink %>&text=<%= page.title %>"><i
+                    class="fab fa-twitter <%= icon_class_name %>" aria-hidden="true"></i></a></li>
+    <li><a class="icon" href="mailto:?subject=<%= page.title %>&body=Check out this article: <%= page.permalink %>"><i
+                    class="fas fa-envelope <%= icon_class_name %>" aria-hidden="true"></i></a></li>
 </ul>
