--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,6 +1,7 @@
 <% if (index) { %>
     <% if (post.link) { %>
-        <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title %></a>
+        <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank"
+           itemprop="url"><%= post.title %></a>
     <% } else if (post.title) { %>
         <a class="<%= class_name %>" href="<%- url_for(post.path) %>"><%= post.title %></a>
     <% } else { %>
@@ -11,4 +12,3 @@
         <%= post.title %>
     </h1>
 <% } %>
-
