--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,18 +1,22 @@
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-  <header>
-    <%- partial('_partial/post/title', { post: page, index: false, class_name: 'posttitle' }) %>
-    <div class="meta">
+    <header>
+        <%- partial('_partial/post/title', {post: page, index: false, class_name: 'posttitle'}) %>
+        <div class="meta">
       <span class="author" itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="name"><% if (page.author) { %><%- page.author %><% } else { %><%- config.author %><% } %></span>
+        <span itemprop="name">
+            <% if (page.author) { %><%- page.author %>
+            <% } else { %><%- config.author %>
+            <% } %>
+        </span>
       </span>
-      <%- partial('_partial/post/date', { post: page, class_name: 'postdate' }) %>
-      <%- partial('_partial/post/category') %>
-      <%- partial('_partial/post/tag') %>
+            <%- partial('_partial/post/date', {post: page, class_name: 'postdate'}) %>
+            <%- partial('_partial/post/category') %>
+            <%- partial('_partial/post/tag') %>
+        </div>
+    </header>
+    <%- partial('_partial/post/gallery') %>
+    <div class="content" itemprop="articleBody">
+        <%- page.content %>
     </div>
-  </header>
-  <%- partial('_partial/post/gallery') %>
-  <div class="content" itemprop="articleBody">
-    <%- page.content %>
-  </div>
 </article>
 <%- partial('_partial/comments') %>
