--- a/layout/_partial/post/actions_mobile.ejs
+++ b/layout/_partial/post/actions_mobile.ejs
@@ -1,28 +1,36 @@
 <div id="footer-post-container">
-  <div id="footer-post">
+    <div id="footer-post">
 
-    <div id="nav-footer" style="display: none">
-      <ul>
-        <% for (var i in theme.nav) { %> 
-          <li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li>
-        <% } %>
-      </ul>
+        <div id="nav-footer" style="display: none">
+            <ul>
+                <% for (var i in theme.nav) { %>
+                    <li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.' + i).replace("nav.", "") %></a></li>
+                <% } %>
+            </ul>
+        </div>
+
+        <div id="toc-footer" style="display: none">
+            <%- toc(page.content) %>
+        </div>
+
+        <div id="share-footer" style="display: none">
+            <%- partial('_partial/post/share', {icon_class_name: 'fa-lg'}) %>
+        </div>
+
+        <div id="actions-footer">
+            <a id="menu" class="icon" href="#" onclick="$('#nav-footer').toggle();return false;"><i
+                        class="fas fa-bars fa-lg"
+                        aria-hidden="true"></i> <%= __('post.mobile.menu') %></a>
+            <a id="toc" class="icon" href="#" onclick="$('#toc-footer').toggle();return false;"><i
+                        class="fas fa-list fa-lg"
+                        aria-hidden="true"></i> <%= __('post.mobile.toc') %></a>
+            <a id="share" class="icon" href="#" onclick="$('#share-footer').toggle();return false;"><i
+                        class="fas fa-share-alt fa-lg" aria-hidden="true"></i> <%= __('post.mobile.share') %></a>
+            <a id="top" style="display:none" class="icon" href="#"
+               onclick="$('html, body').animate({ scrollTop: 0 }, 'fast');"><i class="fas fa-chevron-up fa-lg"
+                                                                               aria-hidden="true"></i> <%= __('post.mobile.back_to_top') %>
+            </a>
+        </div>
+
     </div>
-
-    <div id="toc-footer" style="display: none">
-      <%- toc(page.content) %>
-    </div>
-
-    <div id="share-footer" style="display: none">
-      <%- partial('_partial/post/share', { icon_class_name: 'fa-lg' }) %>
-    </div>
-
-    <div id="actions-footer">
-        <a id="menu" class="icon" href="#" onclick="$('#nav-footer').toggle();return false;"><i class="fas fa-bars fa-lg" aria-hidden="true"></i> <%= __('post.mobile.menu') %></a>
-        <a id="toc" class="icon" href="#" onclick="$('#toc-footer').toggle();return false;"><i class="fas fa-list fa-lg" aria-hidden="true"></i> <%= __('post.mobile.toc') %></a>
-        <a id="share" class="icon" href="#" onclick="$('#share-footer').toggle();return false;"><i class="fas fa-share-alt fa-lg" aria-hidden="true"></i> <%= __('post.mobile.share') %></a>
-        <a id="top" style="display:none" class="icon" href="#" onclick="$('html, body').animate({ scrollTop: 0 }, 'fast');"><i class="fas fa-chevron-up fa-lg" aria-hidden="true"></i> <%= __('post.mobile.back_to_top') %></a>
-    </div>
-
-  </div>
 </div>
